# greeting-actor

./: Cargo.toml  manifest.toml
.github/actions/release-actor/: action.yml
.github/workflows/: release.yml
src/: bindings.rs  lib.rs
wit/: world.wit
